# GROWTH-FY2015-Software

./: .gitignore  .gitmodules  README.md
configurationFile/: configuration_20150929_1409.yaml  configuration_20151015_1457_mac.yaml  configuration_20151029_1302_pi.yaml
controller/: Makefile  README.md  detectorDB.json  display_server.py  growth_console.rb  growth_controller.rb  oled_message.rb  実装したいコマンド.text
daq/: CMakeLists.txt  README.md
daq/src/: CMakeLists.txt  MainThread.hh  MessageServer.hh  growth_adc_daq.cc  growth_daq.cc
include/: ADCDAC.hh
raspi_setup/: 00_setup_all.sh  hosts  install_adafruit_ssd1306.sh  install_apt-get.sh  install_python.sh  install_ruby_gem.sh  install_wiringPi.sh  setup_ssh.sh  setup_usb_current.sh  upgrade_kernel.sh  zshrc
scripts/: auto_observation.sh  fpga_off  fpga_off.sh  fpga_on  fpga_on.sh  go_longrun_alone.sh  go_longrun_alone_restart.sh  go_longrun_hongo.sh  go_longrun_restart.sh  go_loop_daq.sh  go_loop_daq_hongo.sh  go_loop_hk.sh  go_loop_hk_hongo.sh  go_loop_webcam.sh  go_sync_alone.sh  go_sync_fy2015.sh  growth_config  hv_off.sh  hv_on  hv_on.sh  install_libraries.sh  led_off  mount_hdd  startDecision.rb  tell_ip.sh_scp_template  tell_size.sh_scp_template  tell_temp_m2x.sh_template  tempDecision.rb
setup/: 00_setup_all.sh  install_adafruit_ssd1306.sh  install_apt-get.sh  setup_mac.sh  zshrc
src/: EventListFile.hh  EventListFileFITS.hh  EventListFileROOT.hh  GROWTH_FY2015_ADC.hh  MainThread.hh  Makefile  Makefile.mac  Makefile.pi  MessageServer.hh  SerialPort.hh  SpaceWireIFOverUART.hh  SpaceWireSSDTPModuleUART.hh  (+6 more)
(+32 files in other folders)
